--------------------------------------------------------------------------------------------------
Release notes version 1.7.9_beta : Enhancements, modifications and corrected bugs since version 1.7.8 :
--------------------------------------------------------------------------------------------------
04/04/19 (TRUST)  Portability : Fedora 29 and GNU compilers 8.2.1 supported
29/03/19 (TRUST)  Portability : MEDCoupling library is now mandatory to build Trust so -disable-med and -disable-medcoupling options are removed from the configure
29/03/19 (TRUST)  Bug fixed   : Several PETSc CLI solvers can't be used together
13/03/19 (TRUST)  Bug fixed   : Axial symmetry was not functionnal with bidim_axi keyword when reading a 2D MED mesh
20/02/19 (TRUST)  Bug fixed   : Y+ computation homogeinization for .lata and Ustar.face 
13/02/19 (TRUST)  New keyword : Add flux_surfacique_bords option to Morceau_equation keyword to post-process surfacic fluxes on boundaries
05/02/19 (TRUST)  New keyword : Adding possibility to specify maximum number of iteration for the generic "GEN" solver
25/01/19 (TRUST)  Bug fixed   : File evol_glob for quasi-compressible calculation renamed datacase_pbname.evol_glob
23/01/19 (TRUST)  Bug fixed   : Stability time steps are now computed and printed for mass fraction transport 
--------------------------------------------------------------------------------------------------
Release notes version 1.7.8 : Enhancements, modifications and corrected bugs since version 1.7.7 :
--------------------------------------------------------------------------------------------------
07/12/18 (TRUST)  Bug fixed   : Heat exchange boundary condition in VEF was not implicited in conduction equation
25/10/18 (TRUST)  Portability : Released version of PETSc upgraded to 3.10.0
25/10/18 (TRUST)  Performance : Performance of Cholesky Superlu version improved on symmetric matrix  