@@ -7,8 +7,9 @@ let i=$i+1;solver[$i]="Optimal        { seuil $seuil impr }"        						;sym[$
 
 # GMRES DIAG/ILU
 let i=$i+1;solver[$i]="Petsc GMRES    { seuil $seuil precond DIAG { } impr }"							;rank[$i]=4;
-#let i=$i+1;solver[$i]="Petsc GMRES    { seuil $seuil precond ILU { level 1 } impr }"	
-#let i=$i+1;solver[$i]="Petsc GMRES    { seuil $seuil precond PILUT { level 20 epsilon 0.01 } impr }"	
+#let i=$i+1;solver[$i]="Petsc GMRES   { seuil $seuil precond ILU { level 1 } impr }"	
+#let i=$i+1;solver[$i]="Petsc GMRES   { seuil $seuil precond PILUT { level 20 epsilon 0.01 } impr }"	
+let i=$i+1;solver[$i]="Petsc GMRES    { seuil $seuil precond BLOCK_JACOBI_ILU { level 1 } impr }"				;rank[$i]=8;		
 
 # BICGSTAB
 let i=$i+1;solver[$i]="Petsc CLI { -ksp_type bcgs -pc_type sor -ksp_atol $seuil }"	
@@ -42,6 +43,8 @@ let i=$i+1;solver[$i]="Optimal        { seuil $seuil impr }"        						;sym[$
 
 # Cholesky Mumps (Fonctionne en non symetrique mais aucun interet pour TRUST)
 let i=$i+1;solver[$i]="Petsc Cholesky { impr }"									;sym[$i]=1 	;rank[$i]=3;
+let i=$i+1;solver[$i]="Petsc Cholesky_mumps_blr { impr }"							;sym[$i]=1 	;rank[$i]=3;
+let i=$i+1;solver[$i]="Petsc Cholesky_mumps_blr { dropping_parameter 1.e-6 impr }"						;sym[$i]=1 	;rank[$i]=3;
 let i=$i+1;solver[$i]="Petsc Cholesky { ordering metis impr }"							;sym[$i]=1 	;rank[$i]=4;
 let i=$i+1;solver[$i]="Petsc Cholesky { ordering scotch impr }"							;sym[$i]=1 	;rank[$i]=5;
 let i=$i+1;solver[$i]="Petsc Cholesky { ordering parmetis impr }"				;par[$i]=1	;sym[$i]=1 	;rank[$i]=6;
